--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ plugins:
       enable_creation_date: true
   - git-committers:
       repository: Cavineers/Learning
+      branch: learningdevelopment
 
 nav:
   # - Section:
