--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,12 +71,12 @@ markdown_extensions:
 
 nav:
   - Software:
-      - Java Basics:
-        - Software/JavaBasics/index.md
-        - Hello World: Software/JavaBasics/helloWorld.md
-        - Classes: Software/JavaBasics/classes.md
-        - Methods: Software/JavaBasics/methods.md
-        - Variables: Software/JavaBasics/variables.md
+      - Java:
+        - Software/Java/index.md
+        - Hello World: Software/Java/helloWorld.md
+        - Variables: Software/Java/variables.md
+        - Classes: Software/Java/classes.md
+        - Methods: Software/Java/methods.md
       - Commands:
         - Software/Commands/index.md 
         - Structuring a Command: Software/Commands/structure.md
