feat: add skeleton of files for people to add info

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,8 @@ markdown_extensions:
 
 nav:
   - Software:
-      - Java:
+    - Basic:
+      - Java basics:
         - Software/Java/index.md
         - Hello World: Software/Java/helloWorld.md
         - Variables: Software/Java/variables.md
@@ -84,11 +85,26 @@ nav:
         - Command Composition:
           - Software/Commands/Composition/compositions.md
           - Compositional Types: Software/Commands/Composition/types.md
+      - Subsystems:
+        - Software/Subsystems/index.md
+      - Git and Github:
+        - Software/Git/index.md
         # ...
         # - Page n: section/page-n.md
+    - Advanced:
+      - Advanced java: 
+        - Software/Java/advance.md
+        - Inheritance: Software/Java/inheritance.md
+        - Encapsulation: Software/Java/encapsulation.md
+
+
 
   - Hardware:
       - Hardware/index.md 
+      - Sensors:
+        - Hardware/Sensors/index.md
+        - Digital Sensors: Hardware/Sensors/digital.md
+        - Analog Sensors: Hardware/Sensors/analog.md
 
   - Mechanical:
       - Mechanical/index.md 
