Feat: added subs to the navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,10 @@ nav:
           - Compositional Types: Software/Commands/Composition/types.md
       - Subsystems:
         - Software/Subsystems/index.md
+        - Building a Subsystem: Software/Subsystems/buildingASubsystem.md
+        - Subsystem Variables: Software/Subsystems/subsystemVariables.md
+        - Motors and Sensors: Software/Subsystems/motorsAndSensors.md
+        - Motor States: Software/Subsystems/motorStates.md
       - Git and Github:
         - Software/Git/index.md
         # ...
@@ -101,10 +105,10 @@ nav:
 
   - Hardware:
       - Hardware/index.md 
-      - Sensors:
-        - Hardware/Sensors/index.md
-        - Digital Sensors: Hardware/Sensors/digital.md
-        - Analog Sensors: Hardware/Sensors/analog.md
+      # - Sensors:
+      #   - Hardware/Sensors/index.md
+      #   - Digital Sensors: Hardware/Sensors/digital.md
+      #   - Analog Sensors: Hardware/Sensors/analog.md
 
   - Mechanical:
       - Mechanical/index.md 
