--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,10 @@ markdown_extensions:
   - attr_list
   - md_in_html
 
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
